impl/tests/macros/forbidden_visibility.stderr
error: pub(in ...) can't be used
  --> $DIR/forbidden_visibility.rs:12:9
   |
12 |         pub(in super::super) enum ABRM {
   |         ^^^^^^^^^^^^^^^^^^^^
